#10 Code review and bug fixes
This resolves a couple code review comments as well as some long
standing bugs.

### Comments
- List.size() == 0 => List.isEmpty()
- Bad variable names
- BigDecimal non-repeating issue for division
- Useless Manifest.MF file
- urlPairs => urlParameters
- Excess Space
- Commented Code

### Bugs
- Bad datatype for urlParameters
- Specified java version (for Android compatibility
- archivesBaseName set in the build script.
- Non-threadsafe usage of SimpleDateFormat
- Poor usage of URL instead of URI
- Not always closing Http connections.